Added pipeline badges to README

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -11,4 +11,4 @@ ADD . $APP_PATH
 RUN GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -ldflags="-w -s" -o hot-copy \
     && mkdir -p /data && mkdir -p /enc-data
 
-CMD go version && go test -v
+CMD go version && go test -cover && go test -v
